# C-Cpp-University

./: .gitignore  LICENCE  README.md  check.pl
19.10.24/: binarycalc.c  googledrive  main.py  matrix.c
20.09.24/: razvorot.c
27.09.24/: array.c  calculator.c  podshet.c  zamena.c
Algorihtms/contest2023/0/: A.c  C.c
Algorihtms/contest2024/0/: A.c  B.c  C.c  D.c  E.c  F.c  G.c
C-Cpp/09.09.2024/: const.c  for.c  helloworld.c  main.c  main.i  main.s
C-Cpp/09.13.2024/: array.c  counter-error.c  counter.c  counter2.c  func.c  in.c  in2.c
C-Cpp/09.27.2024/: matrix.c
C-Cpp/10.19.2024/: nod.c
C-Cpp/11.15.2024/: CMakeLists.txt
C-Cpp/11.15.2024/include/: math_functions.h
C-Cpp/11.15.2024/src/: main.cpp  math_functions.cpp
C-Cpp/19.10.24/: Artem_hw2.txt
C-Cpp/20.09.24/: sortirovka.c
C-Cpp/27.09.24/: 2ptr.c
C-Cpp/homework/: spaces.c  spruce.c
Lab works/calculator/: calc10.h  main.c
Lab_works/sudoku/: README.md  bruteforce.c  bruteforce.h  colors.h  game.c  game.h  main.c  sudoku.c  sudoku_all.h
Olympiad/just for it/: 01reverse.c  02min_and_max.c  03mad_max.c  06life_lines.c  A01reverse.c  A05second_value.c  A07win_streak.c  B01nanogram.c  offtop_second_max.c
Olympiad/just_for_it/: A01reverse.c  A04second_max.c  A06life_lines.c  A08chemistry.c
algorithms/: test.c
algorithms/contest2023/0/: A.c  B.c  C.c
calculator/: calc2.h
